[package]
name = "dmctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.1.0", features = ["sqlite"] }
dotenvy = "0.15"

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.1.0"
